<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>mc.dragons</groupId>
  <artifactId>dragons-moderationtools</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>dragons-mod-tools</name>
  <description>Moderation tools</description>
  <url>http://maven.apache.org</url>

  <properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>12</maven.compiler.source>
	<maven.compiler.target>12</maven.compiler.target>
  </properties>
  
  <repositories>    
        <repository>
        	<id>spigot-repo</id>
        	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
 			<id>enginehub-maven</id>
			<url>http://maven.enginehub.org/repo/</url>
		</repository>
   </repositories>
   

  <dependencies>
     <dependency>
     	<groupId>org.spigotmc</groupId>
     	<artifactId>spigot-api</artifactId>
     	<version>1.16.5-R0.1-SNAPSHOT</version>
    	<type>jar</type>
     	<scope>provided</scope>
     </dependency>
      <dependency>
      	<groupId>mc.dragons</groupId>
      	<artifactId>dragons-core</artifactId>
      	<version>0.0.1-SNAPSHOT</version>
      </dependency>
  </dependencies>
</project>
